# speech-to-text

./: .coveragerc  .gitignore  Dockerfile  README.md  deploy.sh  env-example  error_reporting_wrapper.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  speech_to_text.py
.autoupdate/: preupdate
.github/workflows/: deploy-prod.yml  deploy.yml  test.yml
docs/: README.md  report.py
docs/baseline/: LLSF_7_20121209_mp4.vtt  bb158br2509_sl.vtt  bg821nn2750_sl_mp4.vtt  br525sp8033_FV4289_v4_sl_mp4.vtt  bs744dg5568_sl_mp4.vtt  bw689yg2740_sl_mp4.vtt  bz245jm8076.json  cf157rm7757.json  cv116wv5355.json  cz258mq3842.json  dd704pb2854_6N_Dhondup_Lhamo_sl_mp4.vtt  dn434hf2144.json  fk250vc8974.json  gj376pv2367.json  gn213vd3845_ev_1_sl.vtt  gn213vd3845_ev_2_sl_mp4.vtt  hv054kd4261.json  jr745nr3367.json  jv560nw0036.json  jz734cm7143.json  kb425fq6029.json  kg363hp7075.json  kp010zv7055_a_sl.vtt  kp010zv7055_a_sl_m4a.vtt  kp010zv7055_b_sl.vtt  kp010zv7055_b_sl_m4a.vtt  mc135dt6327.json  my683pp9971_sl_m4a.vtt  nj963cm2696_em_sl_mp4.vtt  px070tk8203_a_sl.vtt  px070tk8203_a_sl_m4a.vtt  px070tk8203_b_sl_m4a.vtt  qf378nj5000_sl.vtt  qw237kb3383_a_sl_m4a.vtt  qx203gt3137.json  rr765bw2466.json  tg491zk0596.json  tt618qz3245_sl_mp4.vtt  tw602gm2722_a_sl_m4a.vtt  tw602gm2722_b_sl_m4a.vtt  (+8 more)
docs/reports/2025-01-31/: LLSF_7_20121209_mp4.vtt-diff.html  (+64 more)
terraform/: batch.tf  ec2.tf  ecr.tf  iam.tf  output.tf  provider.tf  s3.tf  sqs.tf  variables.example  vpc.tf
tests/: test_error_reporting_wrapper.py  test_inspect_media.py  test_speech_to_text.py
whisper_models/: urls.txt
(+65 files in other folders)
