[project]
name = "speech-to-text"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "boto3>=1.36.9",
    "honeybadger>=0.20.3",
    "openai-whisper>=20240930",
    "python-dotenv[cli]>=1.0.1",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3,sqs,sts]>=1.36.9",
    "moto[s3,sqs,sts]>=5.0.27",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "types-requests>=2.31.0.6",
]
